--- a/src/_includes/activity_info_list.html
+++ b/src/_includes/activity_info_list.html
@@ -5,7 +5,7 @@
       <!-- image -->
       {% if activity.image %}
       <span>
-        <img src={{site.url}}{{site.baseurl}}{{activity.image}}/>
+        <img src="{{activity.image}}"/>
       </span>
 
       {% endif %}
