--- a/src/_includes/highlight_info_list.html
+++ b/src/_includes/highlight_info_list.html
@@ -23,7 +23,7 @@
         <!-- image -->
       {% if highlight.image %}
       
-        <img class="image-highlight" src={{site.url}}{{site.baseurl}}{{highlight.image}}/>
+        <img class="image-highlight" src="{{highlight.image}}"/>
   
       {% endif %}
   </div>
