Updated highlights, recent activity, and fixed 3 errors: Layout problems that do not allow to add more activities, Research Page populated with content, and Acoustic minimap page wrong DOI link

--- a/src/_includes/homepage.html
+++ b/src/_includes/homepage.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-9 scrollableColumn">
       <div class="row">
         <h5 id="title">Ricardo Gonzalez</h5>
       </div>
@@ -29,7 +29,7 @@
       </div>
       {% include highlight_info_list.html %}
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3 scrollableColumn">
       <div class="row">
         <h5 id="recent-activity">Recent Activity</h5>
       </div>
