--- a/src/_sass/components/_collection_list.scss
+++ b/src/_sass/components/_collection_list.scss
@@ -23,7 +23,7 @@
   position: absolute;
   z-index: 5;
   margin: 0 auto;
-  overflow: none;
+  overflow: scroll;
   box-sizing: border-box; // interior border
   background-color: rgba($color-postbg, 0.9);
   border: $secondary-border;
