Fixed link for CV

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -94,7 +94,7 @@
               {% else %}
               <!-- Cv -->
               {% if page.cv_btn != false %}
-              <a class="header_btn cv_btn" href="{{site.url}}{{site.baseurl}}/src/assets/documents/Ricardo_Gonzalez_Penuela_CV.pdf">
+              <a class="header_btn cv_btn" href="https://raw.githubusercontent.com/rgonzalezp/My-true-CV/master/Researcher_Position_CV.pdf">
                 <i class="fa btn_icon fa-folder">
                   {% if page.btn_text != false %}
                   <p class="btn_text">CV</p>
