Fixed grammar errors in highlights and also updated PhD year

--- a/src/_includes/homepage.html
+++ b/src/_includes/homepage.html
@@ -8,7 +8,7 @@
         <div class="separator-zone-1">
           <p class="lead">
             <br/>
-            Hello, I am <b>Ricardo Gonzalez</b>. I am a 2nd year PhD student at
+            Hello, I am <b>Ricardo Gonzalez</b>. I am a starting my 3rd year PhD student at
             the Information Science Department at Cornell Tech, Cornell
             University.
             <br />
