Added animated background effect, still need to integrate it to the center piece (tested changing transparency of background and worked)

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -48,6 +48,19 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.11.5/mermaid.min.js"
   ></script>
 
+  <!-- GreenSock animations-->
+  <script
+    async
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js">
+  </script>
+  <!-- Anime JS animations staggering-->
+  <script 
+  async
+  src="{{site.url}}{{site.baseurl}}/src/assets/js/anime.min.js"></script>
+  <!-- Grid animation-->
+  <script 
+  async
+  src="{{site.url}}{{site.baseurl}}/src/assets/js/gridanimation.js"></script>
   <!-- Ricardo Changes-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
