--- a/src/_sass/components/_background.scss
+++ b/src/_sass/components/_background.scss
@@ -1,7 +1,47 @@
+:root {
+  --g1: rgb(100, 100, 100);
+  --g2: rgb(0, 0, 0);
+}
+
+
+@keyframes background-pan {
+  from {
+    background-position: 0% center;
+  }
+  
+  to {
+    background-position: -200% center;
+  }
+}
 .div_bg {
+
+  animation: background-pan 3s linear infinite;
+  background: linear-gradient(
+    to right,
+    var(--g2),
+    var(--g1),
+    var(--g2)
+  );
+  background-size: 200%;
+
     top: -4px;
     height: 100%;
     width: 100% !important;
     text-align: left;
     position: absolute;
   }
+
+  body.toggled > .div_bg {
+   
+  
+
+  top: -4px;
+  height: 100%;
+  width: 100% !important;
+  text-align: left;
+  position: absolute;
+  }
+
+
+
+  
