Added swap theme, only working in PC

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -6,7 +6,7 @@
       <a class="footer_btn" href="mailto://{{ site.email }}">
         <i class="fa fa-envelope-square">
           {% if page.btn_text != false %}
-          <p>Email</p>
+          <p class="footer_p">Email</p>
           {% endif %}
         </i>
       </a>
@@ -19,7 +19,7 @@
       >
         <i class="fa fa-linkedin">
           {% if page.btn_text != false %}
-          <p>LinkedIn</p>
+          <p class="footer_p">LinkedIn</p>
           {% endif %}
         </i>
       </a>
@@ -29,7 +29,7 @@
       <a class="footer_btn" href="https://github.com/{{ site.github }}">
         <i class="fa fa-github">
           {% if page.btn_text != false %}
-          <p>Github</p>
+          <p class="footer_p">Github</p>
           {% endif %}
         </i>
       </a>
