--- a/src/_includes/homepage.html
+++ b/src/_includes/homepage.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-9 scrollableColumn">
+    <div class="col-sm-9">
       <div class="row">
         <h5 id="title">Ricardo Gonzalez</h5>
       </div>
       <div class="row">
         <div class="separator-zone-1">
-          <p class="lead">
+          <p class="">
             <br/>
             Hello, I am <b>Ricardo Gonzalez</b>. I am a starting my 3rd year PhD student at
             the Information Science Department at Cornell Tech, Cornell
@@ -29,12 +29,12 @@
       </div>
       {% include highlight_info_list.html %}
     </div>
-    <div class="col-sm-3 scrollableColumn">
+    <div class="col-sm-3 ">
       <div class="row">
         <h5 id="recent-activity">Recent Activity</h5>
       </div>
-      <div class="separator-zone-2"></div>
-      <div class="row">{% include activity_info_list.html %}</div>
+      
+      <div class="row" style="margin-top: 85px;">{% include activity_info_list.html %}</div>
     </div>
   </div>
 </div>
