--- a/src/_sass/abstracts/_fonts.scss
+++ b/src/_sass/abstracts/_fonts.scss
@@ -8,6 +8,11 @@
   src: url("../fonts/DotGothic16-Regular.ttf");
 }
 
+@font-face {
+  font-family: "Oswald";
+  src: url("../fonts/Oswald-VariableFont_wght.ttf");
+}
+
 // font family
 $font-serif-body: VT323, Times, serif, "Source Han Sans CN Medium",
   "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei",
