--- a/src/_sass/components/_footer.scss
+++ b/src/_sass/components/_footer.scss
@@ -27,8 +27,8 @@
     p {
       font-size: $footer-text-size;
       margin: 0 0.5em 0 0.05em;
+      font-family: "DotGothic", monospace;
       display: inline;
-      font-family: $font-serif-body;
     }
   }
   .footer_copyright {
