--- a/src/_sass/components/_background.scss
+++ b/src/_sass/components/_background.scss
@@ -1,6 +1,7 @@
 :root {
   --g1: rgb(100, 100, 100);
   --g2: rgb(0, 0, 0);
+  --g3: rgb(230, 230, 230);
 }
 
 
@@ -32,9 +33,9 @@
   }
 
   body.toggled > .div_bg {
-   
-  
-
+    animation:none;
+    background: black;
+  background-size: 200%;
   top: -4px;
   height: 100%;
   width: 100% !important;
