--- a/src/_sass/components/_header.scss
+++ b/src/_sass/components/_header.scss
@@ -2,14 +2,12 @@
 
 
 .header {
-
   position: absolute;
   text-align: center;
   width: 100%;
   height: auto;
   z-index: 3;
-  border: $secondary-border;
-  border-bottom: transparent;
+  border: 1.35px solid rgba(200,200,200, 0.87);
   .vertical_center_table {
     width: 100%;
     height: $header-height; // the real height of header
@@ -35,11 +33,7 @@
     white-space: nowrap;
     a {
       margin-right: 20px;
-      border-bottom: white;
-      border-top: transparent !important;
-      border-left: transparent !important;
-      border-right: transparent !important;
-      border: solid;
+    
     }
 
     .collection_btn {
@@ -106,7 +100,7 @@
     margin: 0;
     display: inline-block;
     text-transform: capitalize;
-    font-family: $font-serif-title;
+    font-family: "DotGothic", monospace;
     font-size: $header-btn-text-size;
   }
   .btn_icon {
