--- a/src/_sass/components/_homepage.scss
+++ b/src/_sass/components/_homepage.scss
@@ -4,8 +4,7 @@
   top: 0 !important;
   left: 0 !important;
   margin: 0;
-  border: 2.1px solid #c8c8c8;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .anythingelse{
@@ -15,7 +14,7 @@
   font-size: 88px;
   padding-top: 25px;
   height: 50px;
-  font-family: $font-serif-title;
+  font-family: DotGothic;
   padding-left: 30px;
 }
 
@@ -23,14 +22,14 @@
   font-size: 70px;
   padding-top: 25px;
   height: 50px;
-  font-family: $font-serif-title;
+  font-family: DotGothic;
   padding-left: 30px;
 }
 
 #recent-activity {
   font-size: 60px;
   height: 100px;
-  font-family: $font-serif-title;
+  font-family: DotGothic;
   padding-top: 20px;
   text-align: center;
 }
@@ -55,6 +54,10 @@
   border-left: none;
   width: 83%;
   margin-left: 15px;
+}
+
+#special-separator {
+  border:none;
 }
 
 @media screen and (max-width:1700px) {
