showcase 5 latest news

--- a/src/_includes/activity_info_list.html
+++ b/src/_includes/activity_info_list.html
@@ -1,5 +1,5 @@
 
-{% for activity in site.recent_activity reversed %}
+{% for activity in site.recent_activity reversed limit:5 offset:3 %}
 <div class="separator-zone-2 anythingelse">
   <div class="activity_info">
       <!-- image -->
@@ -19,6 +19,7 @@
     {% if activity.abstract %}
     <div class="description">
       <p>«{{ activity.abstract }}»</p>
+      
     </div>
     {% endif %}
   </div>
