--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div id="footer" class="footer">
   <nav class="nav_bar">
     <ul class="footer_owner_info">
       <!-- email -->
