added recent activity, fixed state swap

--- a/src/_includes/homepage.html
+++ b/src/_includes/homepage.html
@@ -7,17 +7,29 @@
       <div class="row">
         <div class="separator-zone-1">
           <p class="">
-            <br/>
-            Hello, I am <b>Ricardo Gonzalez</b>. I am a starting my 3rd year PhD student at
-            the Information Science Department at Cornell Tech, Cornell
-            University.
             <br />
-            <br/>
+            Hello, I am <b>Ricardo Gonzalez</b>. I am a finishing my 2nd year of
+            my PhD in the Information Science Department at Cornell Tech,
+            Cornell University.
+            <br />
+            <br />
             In this website you will find many things: My previous work done
             before joining the PhD, my current projects in Accessibility, and
             various other posts related to subjects that I like to talk about.
             You can also take a look at my personal notes and thoughts on
             general topics.
+            <br /><br />
+            My research interests lie in
+            <b
+              >designing useful interactive systems focusing on empowering
+              people with disabilities</b
+            >. As of today, I have worked together with
+            <b>people with visual impairments</b>, including blind and people
+            with low vision, to improve the accessibility of
+            <b>3D virtual environments</b>, <b>AI powered systems</b>, and
+            <b>mobile cameras</b>. Furthermore, my colleagues and I have come up
+            with novel ways of interacting in <b>Virtual Reality</b>, and 3D
+            printed models using <b>Augmented Reality</b>.
           </p>
         </div>
       </div>
@@ -29,12 +41,14 @@
       </div>
       {% include highlight_info_list.html %}
     </div>
-    <div class="col-sm-3 ">
+    <div class="col-sm-3">
       <div class="row">
         <h5 id="recent-activity">Recent Activity</h5>
       </div>
-      
-      <div class="row" style="margin-top: 85px;">{% include activity_info_list.html %}</div>
+
+      <div class="row" style="margin-top: 85px">
+        {% include activity_info_list.html %}
+      </div>
     </div>
   </div>
 </div>
