Added fadeOut animation to collection list

--- a/src/_layouts/collections.html
+++ b/src/_layouts/collections.html
@@ -9,7 +9,7 @@ author: ""
 encrypted_text: false
 ---
 <div class="collection_list">
-<h1>Collections</h1>
+<h5 id="title">Collections</h1>
 {% for collection in site.collections %}
     <h2>{{collection.label}}</h2>
     {% for post in collection.docs %}
