--- a/src/_sass/abstracts/_animations.scss
+++ b/src/_sass/abstracts/_animations.scss
@@ -21,6 +21,27 @@
   }
 }
 
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1;
+    visibility: visible;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    visibility: visible;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 .blink_text {
   @keyframes blktxt {
     0% {
