--- a/src/_sass/layouts/_global.scss
+++ b/src/_sass/layouts/_global.scss
@@ -61,6 +61,11 @@
   @include fade_in;
 }
 
+.remove {
+  
+  @include fade_out;
+}
+
 // screen auto-adjustment
 @media screen and (max-width: 800px) {
   .page .container {
