--- a/src/_sass/components/_collection_list.scss
+++ b/src/_sass/components/_collection_list.scss
@@ -4,7 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: mix(rgba($color-primary, 0.6), rgba($color-bg, 0.6));
+  background: black;
+  opacity: 1;
   visibility: hidden;
   z-index: 4;
   font-family: $font-serif-title;
@@ -18,12 +19,8 @@
 }
 .collection_list {
   left: 13%;
-  height: 100%;
-  width: 74%;
-  position: absolute;
-  z-index: 5;
+
   margin: 0 auto;
-  overflow: scroll;
   box-sizing: border-box; // interior border
   background-color: rgba($color-postbg, 0.9);
   border: $secondary-border;
