--- a/src/_includes/homepage.html
+++ b/src/_includes/homepage.html
@@ -6,7 +6,7 @@
       </div>
       <div class="row">
         <div class="separator-zone-1">
-          <p class="">
+          <p class="info_text">
             <br />
             Hello, I am <b>Ricardo Gonzalez</b>. I am a finishing my 2nd year of
             my PhD in the Information Science Department at Cornell Tech,
