--- a/src/_sass/layouts/_global.scss
+++ b/src/_sass/layouts/_global.scss
@@ -26,6 +26,18 @@
   overflow-y: scroll;
   height: 1400px;
 }
+
+ /* Hide scrollbar for Chrome, Safari and Opera */
+ .div_article::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.div_article {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+} 
+
 .div_article {
   top: $header-height + 1px;
   height: 92%;
