--- a/src/_sass/_black_n_green.scss
+++ b/src/_sass/_black_n_green.scss
@@ -10,6 +10,7 @@
 @import "vendor/syntax";
 // base styles
 @import "base/base";
+@import "base/game";
 // components
 @import "components/footer";
 @import "components/collection_list";
