--- a/src/_sass/abstracts/_fonts.scss
+++ b/src/_sass/abstracts/_fonts.scss
@@ -13,6 +13,17 @@
   src: url("../fonts/Oswald-VariableFont_wght.ttf");
 }
 
+
+@font-face{
+  font-family: "under_menu";
+  src: url("../fonts/MERCY.ttf")
+}
+
+@font-face{
+  font-family: "under_player";
+  src: url("../fonts/Mars_Needs_Cunnilingus.ttf")
+}
+
 @font-face {
   font-family: "under_sans";
   src: url("../fonts/DeterminationMonoWeb.woff");
