--- a/src/_sass/abstracts/_variables.scss
+++ b/src/_sass/abstracts/_variables.scss
@@ -30,6 +30,7 @@ $collection-list-header-size: 70px;
 // standard border
 $thick-border: 2.1px solid $color-primary;
 $secondary-border: 6.35px solid rgba($color-primary,1);
+$game-border: 6.35px solid rgba(255,255,255,1);
 $medium-border: 0.95px solid rgba($color-primary, 0.83);
 $thin-border: 0.5px solid rgba($color-primary, 0.6);
 
