--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -14,6 +14,7 @@
   <ul class="footer_copyright">
     {% if site.statement %}
     {{ site.statement }}
+    <span id="undertale_heart_icon">❤️</span>
     {% endif %}
   </ul>
 </div>
