--- a/src/_sass/components/_background.scss
+++ b/src/_sass/components/_background.scss
@@ -26,7 +26,7 @@
   background-size: 200%;
 
     top: -4px;
-    height: 100%;
+    height: inherit;
     width: 100% !important;
     text-align: left;
     position: absolute;
