Added new icons and added subtext to recent activity for more customization

--- a/src/_includes/activity_info_list.html
+++ b/src/_includes/activity_info_list.html
@@ -9,6 +9,13 @@
       </span>
 
       {% endif %}
+      <!-- subtext -->
+      {% if activity.subtext %}
+      <span class="subtext_recent_activity">
+        {{activity.subtext}}
+      </span>
+
+      {% endif %}
       <!-- date -->
       {% if activity.date %}
       <span class="recent_activity_date">
