--- a/src/_sass/components/_activity_info.scss
+++ b/src/_sass/components/_activity_info.scss
@@ -23,4 +23,10 @@
       }
 
 }
+.subtext_recent_activity{
+  display:block;
+  font-size: 30px;
+  font-weight: 500;
+  font-family: "under_mono";
+}
   
