Cleaned up the css furthermore, left comments on various edited sass files and htmls with TODOs

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -96,7 +96,7 @@
                 </i>
               </a>
               {% else %}
-              <!-- Collaborators -->
+              <!-- Collaborators, have to adjust a little bit for different sizes so that NavBar stays looking good -->
               {% if page.cv_btn != false %}
               <a
                 class="header_btn collab_btn"
