--- a/src/_layouts/collaborators.html
+++ b/src/_layouts/collaborators.html
@@ -1,2 +1,10 @@
+---
+layout: default
+---
 <!-- Collaborators page in Jekyll-->
 <!-- Remember to add page.excerpt for specific info about this page, for better discoverability?-->
+
+<script
+  src="{{ site.url }}{{ site.baseurl }}/src/assets/js/collaborators.js"
+  async
+></script>
