--- a/src/_sass/components/_highlight_info.scss
+++ b/src/_sass/components/_highlight_info.scss
@@ -12,7 +12,7 @@
       border-bottom: $thin-border;
     }
   }
-
+// change all dash-case to camel_case
   .title-highlight{
 
     margin-top: 10px;
