--- a/src/_sass/components/_homepage.scss
+++ b/src/_sass/components/_homepage.scss
@@ -6,7 +6,7 @@
   margin: 0;
   background-color: rgba(0, 0, 0, 0.3);
 }
-
+// change all dash-case to camel_case, change the bad names too
 .anythingelse{
     margin-top:-2.5px!important;
 }
