--- a/src/_sass/_aggregator.scss
+++ b/src/_sass/_aggregator.scss
@@ -7,7 +7,7 @@
 @import "abstracts/mixins";
 @import "abstracts/animations";
 // vendor
-@import "vendor/syntax";
+@import "vendor/syntax_code";
 // base styles
 @import "base/base";
 @import "base/game";
