--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -4,5 +4,5 @@ Jekyll Assets: start scss files with two lines of triple dashes
 
 @charset "utf-8";
 
-@import "black_n_green";
+@import "aggregator";
 @import "bootstrap";
