Added new citations and hiding collaborators for now

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -97,12 +97,12 @@
               </a>
               {% else %}
               <!-- Collaborators, have to adjust a little bit for different sizes so that NavBar stays looking good -->
-              {% if page.cv_btn != false %}
+              <!--{% if page.cv_btn != false %}
               <a
                 class="header_btn collab_btn"
                 href="{{ site.url }}{{ site.baseurl }}/collaborators"
               >
-              <!-- Select Correct icon here, check FA icons-->
+              Select Correct icon here, check FA icons
                 <i class="fa btn_icon fa-folder">
                   {% if page.btn_text != false %}
                   <p class="btn_text">Collaborators</p>
@@ -110,6 +110,7 @@
                 </i>
               </a>
               {% endif %}
+            -->
               <!-- Cv -->
               {% if page.cv_btn != false %}
               <a
