Added new Recent Activity

--- a/src/_includes/activity_info_list.html
+++ b/src/_includes/activity_info_list.html
@@ -1,5 +1,5 @@
-
-{% for activity in site.recent_activity reversed limit:5 offset:4 %}
+<!-- To change which posts appear, change order and offset.-->
+{% for activity in site.recent_activity reversed limit:5 offset:5 %}
 <div class="separator-zone-2 anythingelse">
   <div class="activity_info">
       <!-- image -->
