--- a/src/_includes/homepage.html
+++ b/src/_includes/homepage.html
@@ -2,31 +2,27 @@
   <div class="row">
     <div class="col-sm-9">
       <div class="row">
-        <h5 id="title">Ricardo Gonzalez</h5>
+        <h5 id="title">Ricky Gonzalez</h5>
       </div>
       <div class="row">
         <div class="separator-zone-1">
           <p class="info_text">
             <br />
-            Hello, I am <b>Ricardo Gonzalez</b>. I am a finishing my 2nd year of
+            Hello, I am <b>Ricky Gonzalez</b>. I am a finishing my 3rd year of
             my PhD in the Information Science Department at Cornell Tech,
             Cornell University.
             <br />
             <br />
             In this website you will find many things: My previous work done
-            before joining the PhD, my current projects in Accessibility, and
-            various other posts related to subjects that I like to talk about.
-            You can also take a look at my personal notes and thoughts on
-            general topics.
+            before joining the PhD, my current research projects, and
+            other various milestones.
+            
             <br /><br />
-            My research interests lie in
-            <b
-              >designing useful interactive systems focusing on empowering
-              people with disabilities</b
-            >. As of today, I have worked together with
-            <b>people with visual impairments</b>, including blind and people
-            with low vision, to improve the accessibility of
-            <b>3D virtual environments</b>, <b>AI powered systems</b>, and
+            My research involves
+            <b>designing interactive systems focusing on empowering
+              people with disabilities</b>. As of today, I have worked together with
+            <b>Blind and Low Vision</b> users to improve the accessibility of
+            <b>3D virtual environments</b>, <b>Data Analysis</b>, <b>AI powered systems</b>, and
             <b>mobile cameras</b>. Furthermore, my colleagues and I have come up
             with novel ways of interacting in <b>Virtual Reality</b>, and 3D
             printed models using <b>Augmented Reality</b>.
