Testing new icons

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -47,7 +47,7 @@
               {% endif %} {% if page.about != false %}
               <a class="header_btn research_btn" onclick="scroll_percentage(2)">
                 <i class="fa btn_icon">
-                  <img class= "myicon" src="https://github.com/rgonzalezp/rgonzalezp.github.io/blob/main/src/assets/img/icons/contact.png?raw=true">
+                  <img class= "myicon" src="https://github.com/rgonzalezp/rgonzalezp.github.io/blob/main/src/assets/img/icons/contact32.png?raw=true">
                   {% if page.about != false %}
                   <p class="btn_text">Contact</p>
                   {% endif %}
@@ -118,7 +118,8 @@
                 class="header_btn cv_btn"
                 href="https://raw.githubusercontent.com/rgonzalezp/My-true-CV/master/PhD_Resume.pdf"
               >
-                <i class="fa btn_icon fa-folder">
+                <i class="fa btn_icon">
+                  <img class= "myicon" src="https://github.com/rgonzalezp/rgonzalezp.github.io/blob/main/src/assets/img/icons/resume32.png?raw=true">
                   {% if page.btn_text != false %}
                   <p class="btn_text">CV</p>
                   {% endif %}
