Added new icon flask

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -38,7 +38,8 @@
                 class="header_btn research_btn"
                 href="{{ site.url }}{{ site.baseurl }}/research"
               >
-                <i class="fa btn_icon fa-flask">
+              <i class="fa btn_icon">
+                <img class= "myicon" src="https://github.com/rgonzalezp/rgonzalezp.github.io/blob/main/src/assets/img/icons/flask32.png?raw=true">
                   {% if page.btn_text != false %}
                   <p class="btn_text">Research</p>
                   {% endif %}
