Updating last icon

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -25,7 +25,8 @@
                 class="header_btn home_btn"
                 href="{{ site.url }}{{ site.baseurl }}/"
               >
-                <i class="fa btn_icon fa-home">
+              <i class="fa btn_icon">
+                <img class= "myicon" src="https://github.com/rgonzalezp/rgonzalezp.github.io/blob/main/src/assets/img/icons/home32.png?raw=true">
                   {% if page.btn_text != false %}
                   <p class="btn_text">Home</p>
                   {% endif %}
