--- a/src/_includes/homepage.html
+++ b/src/_includes/homepage.html
@@ -4,11 +4,14 @@
       <div class="row">
         <h5 id="title">Ricky Gonzalez</h5>
       </div>
+      <!-- create subtitle html with current role/affiliation -->
       <div class="row">
         <div class="separator-zone-1">
           <p class="info_text">
             <br />
-            Hello, I am <b>Ricky Gonzalez</b>. I am a finishing my 3rd year of
+            Hello, I am <b>Ricky Gonzalez</b>!
+            <br/>
+            I am a finishing my 3rd year of
             my PhD in the Information Science Department at Cornell Tech,
             Cornell University.
             <br />
