--- a/src/_includes/homepage.html
+++ b/src/_includes/homepage.html
@@ -11,9 +11,7 @@
             <br />
             Hello, I am <b>Ricky Gonzalez</b>!
             <br/>
-            I am a finishing my 3rd year of
-            my PhD in the Information Science Department at Cornell Tech,
-            Cornell University.
+            I am a PhD Candidate in the <a href="https://infosci.cornell.edu/phd">Information Science Department</a> at <a href="https://www.cornell.edu/">Cornell University,</a> <a href="https://tech.cornell.edu/research/human-centered-computing/">Cornell Tech.</a> I am a Human-AI Interaction researcher.
             <br />
             <br />
             In this website you will find many things: My previous work done
@@ -22,7 +20,7 @@
             
             <br /><br />
             My research involves
-            <b>designing interactive systems focusing on empowering
+            <b>designing intelligent interactive systems focusing on empowering
               people with disabilities</b>. As of today, I have worked together with
             <b>Blind and Low Vision</b> users to improve the accessibility of
             <b>3D virtual environments</b>, <b>Data Analysis</b>, <b>AI powered systems</b>, and
